--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Regalo Especial</title>
+  </head>
+  <body>
+    <h1>¡Hola! Esto es un regalo especial 💛</h1>
+    <p>Con amor, hecho en GitHub Pages.</p>
+  </body>
+</html>
 <html>
 <head>
 <meta charset="utf-8" />
@@ -198,3 +209,4 @@ che ho realizzato con impegno e tempo, dato che disegnarlo è stato un po' una s
 </script>
 </body>
 </html>
+
