--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <div style="text-align:center; margin-top:30px;">
   <video width="500" controls autoplay loop muted style="border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.3);">
-    <source src="Bouquette.mp4" type="video/mp4">
+    <source src="video/Bouquette.mp4" type="video/mp4">
     Tu navegador no soporta videos HTML5.
   </video>
   <p style="margin-top:10px; font-style:italic; color:#444;">
@@ -67,7 +67,7 @@
 <div style="display:flex; align-items:center; margin:20px 0; background:#fff8e1; padding:15px; border-radius:12px;">
 
   <!-- Imagen -->
-  <img src="liridraw.png" alt="Giglio" style="width:150px; height:auto; border-radius:8px; margin-right:20px;">
+  <img src="images/liridraw.png" alt="Giglio" style="width:150px; height:auto; border-radius:8px; margin-right:20px;">
 
   <!-- Texto -->
   <div>
@@ -86,7 +86,7 @@
 <div style="display:flex; align-items:center; margin:20px 0; background:#fff8e1; padding:15px; border-radius:12px;">
 
   <!-- Imagen -->
-  <img src="b-dragondraw.png" alt="Bocca di leone" style="width:150px; height:auto; border-radius:8px; margin-right:20px;">
+  <img src="images/b-dragondraw.png" alt="Bocca di leone" style="width:150px; height:auto; border-radius:8px; margin-right:20px;">
 
   <!-- Texto -->
   <div>
@@ -105,7 +105,7 @@ Amore e passione, energia positiva, li provo per te.
 <div style="display:flex; align-items:center; margin:20px 0; background:#fff8e1; padding:15px; border-radius:12px;">
 
   <!-- Imagen -->
-  <img src="tulipdraw.png" alt="Tulipano" style="width:150px; height:auto; border-radius:8px; margin-right:20px;">
+  <img src="images/tulipdraw.png" alt="Tulipano" style="width:150px; height:auto; border-radius:8px; margin-right:20px;">
 
   <!-- Texto -->
   <div>
@@ -125,7 +125,7 @@ L'arancione cerca di trasmettere comprensione ed entusiasmo.
 <div style="display:flex; align-items:center; margin:20px 0; background:#fff8e1; padding:15px; border-radius:12px;">
 
   <!-- Imagen -->
-  <img src="aistodraw.png" alt="Alstroemeriao" style="width:150px; height:auto; border-radius:8px; margin-right:20px;">
+  <img src="images/aistodraw.png" alt="Alstroemeriao" style="width:150px; height:auto; border-radius:8px; margin-right:20px;">
 
   <!-- Texto -->
   <div>
@@ -199,6 +199,7 @@ che ho realizzato con impegno e tempo, dato che disegnarlo è stato un po' una s
 </script>
 </body>
 </html>
+
 
 
 
