--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <div style="text-align:center; margin-top:30px;">
   <video width="500" controls autoplay loop muted style="border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.3);">
-    <source src="video/bouquette.mp4" type="video/mp4">
+    <source src="video/bouquette.mp4" type="video">
     Tu navegador no soporta videos HTML5.
   </video>
   <p style="margin-top:10px; font-style:italic; color:#444;">
@@ -199,6 +199,7 @@ che ho realizzato con impegno e tempo, dato che disegnarlo è stato un po' una s
 </script>
 </body>
 </html>
+
 
 
 
