--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 
 <div style="text-align:center; margin-top:30px;">
   <video width="500" controls autoplay loop muted style="border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.3);">
-    <source src="video/bouquette.mp4" type="video">
-    Tu navegador no soporta videos HTML5.
+    <source src="video/bouquette.mp4" type="video/mp4">
   </video>
   <p style="margin-top:10px; font-style:italic; color:#444;">
     Un piccolo pensiero solo per te 🌼
@@ -199,6 +198,7 @@ che ho realizzato con impegno e tempo, dato che disegnarlo è stato un po' una s
 </script>
 </body>
 </html>
+
 
 
 
